<resources>
    <string name="default_web_client_id" translatable="false">395831132438-3052cj7tqj1b4tng5lrovgfpf33j0deq.apps.googleusercontent.com</string>
    <string name="app_name">agroecologico</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="facebook_application_id" translatable="false">687925075932853</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb687925075932853</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="market_stall_title">Puesto de Venta</string>
    <string name="btn_edit">Editar</string>
    <string name="market_stall_label">Nombre Puesto:</string>
    <string name="id_worker_label">ID</string>
    <string name="cellphone_label">Celular</string>
    <string name="email_label">Correo</string>
    <string name="add_sales_person_text">Añadir Vendedor</string>
    <string name="add_label">Añadir</string>
</resources>